# NHLschedule

./: AG_2526_Schedule.xlsx  README.md  Team2TM.xlsx  pyproject.toml  requirements.txt
_cache/: nst_team_pk_NA_20242025.parquet  nst_team_pk_NA_20252026.parquet  nst_team_pp_NA_20242025.parquet  nst_team_pp_NA_20252026.parquet  nst_team_sva_B_20242025.parquet  nst_team_sva_B_20252026.parquet
nhl_schedule/: __init__.py  build_lookup.py  config.py  diagnostics.py  export.py  nst_fetch.py  ratings.py  schedule_io.py
nhl_schedule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output/: lookup_table.csv  lookup_table.diagnostics.json  opponent_ease_lookup.csv  opponent_offense_lookup.csv
