[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-schedule"
version = "0.1.0"
description = "NHL schedule utilities"
requires-python = ">=3.10"
dependencies = [
  "pandas",      # ensure a version that supports Python 3.13 is used in your env
  "numpy",
  "requests",
  "pyarrow",     # if you read/write parquet
  "xlsxwriter"   # for Excel export in write_outputs
]