[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-schedule"
version = "0.1.0"
description = "NHL schedule utilities"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "pyarrow",
  "xlsxwriter"
]

[tool.setuptools]
# Use flat layout but explicitly constrain package discovery to avoid picking up folders like 'output', '_cache', '_plots'
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["nhl_schedule*"]
exclude = ["output*", "_cache*", "_plots*"]